--- a/app/Styles/categories.module.css
+++ b/app/Styles/categories.module.css
@@ -1,14 +1,14 @@
 .card {
 
     
-    height: 625px;
+    /* height: 625px; */
+    height: var(--card-height);
 
-    width:340px;    
+    width:320px;    
     position: relative;
     background-color: #ccc;
     background-color: #fbfbfb;
     margin: 0 auto; 
-    margin-top: -14rem; 
 
 
     margin-bottom: 5.9rem;
@@ -22,6 +22,26 @@
 
 
 }
+
+
+
+.mainCategoryCardContainer{
+
+
+    margin-top: -4rem !important; 
+    height: 70vh; 
+    max-height: 650px;
+
+
+
+
+
+}
+
+
+
+
+
 
 .cardCategoryColorContainer {
 
@@ -155,8 +175,9 @@
     right: 0;
     top: 0;
     position: relative;
-    width: 345px;
-    height: 555px;
+    width: 45px;
+    /* height: 555px; */
+    height: var(--card-height);
     background-color: #fbfbfb;
     border-radius: 0rem;
     -webkit-border-radius: 0rem;
@@ -171,34 +192,16 @@
 }
 
 #cardTwo {
-
-
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    right: 0; 
-    bottom: 0; 
+    
     display: none;
 
-    z-index: -1;
-    margin-bottom: -5rem !important;
-    height: 555px; 
-    max-height: 777px;
-    width: 338px;
-    background-color: #fbfbfb;
-    box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
-    transform:translate(0rem, 4em);
-    -webkit-transform:translate(0rem, 4em);
-    -moz-transform:translate(0rem, 4em);
-    -ms-transform:translate(0rem, 4em);
-    -o-transform:translate(0rem, 4em);
 
 }
 
 #cardThree {
 
 
-    width: 340px;
+    width: 320px;
     height: 400px;
     background-color: #fbfbfb;
     border-radius: 1rem;
@@ -222,7 +225,7 @@
 
     position: relative;
     z-index: -5;
-    width: 340px;
+    width: 320px;
     height: 400px;
     background-color: #fbfbfb;
     position: absolute;
@@ -239,6 +242,7 @@
     -moz-border-radius: 0 0 1rem 1rem;
     -ms-border-radius: 0 0 1rem 1rem;
     -o-border-radius: 0 0 1rem 1rem;
+
 
 
 }
@@ -264,7 +268,7 @@
     display: grid;  
     place-content: center;
 
-    margin-top: 8em; 
+    margin-top: 4em; 
 
 
 
@@ -317,7 +321,7 @@
 
 .CTAButton{
     height: 60px;
-    width: 340px;
+    width: 318px;
     color: #7f7f7f;
     background-color: white;
     font-weight: bolder;
@@ -337,11 +341,9 @@
 .mainLogoContainer{
 
     color: white; 
-text-align: center;
-/* width: 60%;  */
-margin: 0 auto; 
-
-font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
+    text-align: center;
+    margin: 0 auto; 
+    font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
 
 
 
