--- a/app/Styles/email.module.css
+++ b/app/Styles/email.module.css
@@ -1,6 +1,8 @@
 .card {
-    height: 625px;
-    width:340px;    
+    height: var(--card-height);
+    max-height: var(--max-card-height);
+
+    width:320px;    
     position: relative;
     background-color: #ccc;
     background-color: #fbfbfb;
@@ -116,7 +118,7 @@
     right: 0;
     top: 0;
     position: relative;
-    width: 345px;
+    width: 320px;
     height: 555px;
     background-color: #fbfbfb;
     border-radius: 0rem;
@@ -141,7 +143,7 @@
     margin-bottom: -5rem !important;
     height: 555px; 
     max-height: 777px;
-    width: 338px;
+    width: 320px;
     background-color: #fbfbfb;
     box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3);
     transform:translate(0rem, 4em);
@@ -152,7 +154,7 @@
 }
 
 #cardThree{
- width: 340px;
+ width: 320px;
  height: 400px;
  background-color: #fbfbfb;
  border-radius: 1rem;
@@ -160,7 +162,6 @@
  -moz-border-radius: 1rem;
  -ms-border-radius: 1rem;
  -o-border-radius: 1rem;
- /* display: none; */
  position: absolute;
  bottom: 0; 
  z-index: -2;
@@ -171,7 +172,7 @@
 #cardFour{
     position: relative;
     z-index: -5;
-    width: 340px;
+    width: 320px;
     height: 400px;
     background-color: #fbfbfb;
     position: absolute;
