--- a/app/Styles/legal.module.css
+++ b/app/Styles/legal.module.css
@@ -176,6 +176,8 @@ text-decoration: underline;
     color: white; 
     font-size: 1.5rem;
     font-weight: bolder;
+    cursor: pointer; 
+    
 
 
 }
