--- a/app/Styles/start.module.css
+++ b/app/Styles/start.module.css
@@ -31,6 +31,18 @@ font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
 
 }
 
+
+
+.mainTextHeader{
+
+
+    font-size: 2.9rem;
+    line-height: 1.3;
+
+
+
+}
+
 .theSpan{
 
     display: block; 
@@ -51,12 +63,14 @@ font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
 
 
 .CTAButton{
-    /*all: unset;
-    */height: 3rem !important;
-    width: 9rem !important;
+   
     color: white;
-    /*background-color: aliceblue;
-    */background-color: #f49b53;
+    width: 300px; 
+    height: 55px; 
+    font-weight: bolder;
+    font-size: 1.4rem;
+    
+    background-color: #f49b53;
     display: grid;
     place-content: center;
     border-radius: 14px;
@@ -83,16 +97,14 @@ font-size: clamp(1.5rem + 1vw, 2rem, 3rem);
 
 
 .bySpan{
-
-
     margin: 0 auto;
-
-    margin-bottom: -0em; 
-    color: white; 
-    
-
-
-
+    margin-bottom: -8em;
+    color: white;
+    transform:translate(0, 1em) ;
+    -webkit-transform:translate(0, 1em) ;
+    -moz-transform:translate(0, 1em) ;
+    -ms-transform:translate(0, 1em) ;
+    -o-transform:translate(0, 1em) ;
 }
 
 
