--- a/app/Styles/Quiz.module.css
+++ b/app/Styles/Quiz.module.css
@@ -362,12 +362,22 @@ margin-bottom: 5em;
 
 .quizCardContainer{
 
-    /* position: absolute;  */
-    
-    
 
 
 }
+
+.categoryCardContainer{
+
+
+    margin-top: -9em; 
+    
+
+
+
+}
+
+
+
 
 .doodleContainer{
 
