--- a/app/Styles/PhoneBarChart.module.css
+++ b/app/Styles/PhoneBarChart.module.css
@@ -35,7 +35,7 @@
     background-color: #99bb9a;
     display: grid;
     place-content: center;
-    margin: 0.5rem auto;
+    margin: 0rem auto;
 
     margin-top: -0.5em !important; 
 
@@ -44,6 +44,8 @@
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
+
+    /* outline: 5px solid red; */
 
 
 
@@ -59,6 +61,8 @@
         color: rgb(41, 39, 39);
         position: relative; 
         min-height: auto;
+
+        /* outline: 5px solid red; */
 
 }
 
@@ -377,13 +381,18 @@
 .barChartSection {
     width: 60vw;
     max-width: 800px;
-    margin: 3rem auto 2rem auto; 
+    margin: 0rem auto 0rem auto; 
     padding: 1rem 2rem;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 15px;
     backdrop-filter: blur(10px);
     box-sizing: border-box;
     display: block;
+
+
+    /* outline: 5px solid red; */
+
+
 }
 
 .barChartItem {
@@ -415,12 +424,14 @@
 
 .barBackground {
     width: 100%;
-    height: 50px;
+    height: 90px;
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 15px;
     overflow: hidden;
     position: relative;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
+    
+
 }
 
 .barFill {
@@ -592,6 +603,51 @@
 
 
 }
+
+
+
+@media(min-width: 1200px){
+
+
+    .barChartSection {
+        width: 60vw;
+        max-width: 800px;
+        margin: 0rem auto 0rem auto; 
+        padding: 1rem 2rem;
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 15px;
+        backdrop-filter: blur(10px);
+        box-sizing: border-box;
+        display: block;
+    
+        margin-top: -4em !important; 
+    
+        /* outline: 5px solid red; */
+    
+    
+    }
+
+
+
+
+
+
+
+}
+
+
+@media(min-width: 700px){
+
+
+
+
+
+
+
+}
+
+
+
 
 
 
