--- a/app/Styles/adult.module.css
+++ b/app/Styles/adult.module.css
@@ -150,6 +150,12 @@ text-align: left;
     margin-top: -4em;
 
 
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;     /* IE10+/Edge */
+    user-select: none; 
+
+
     color: white; 
     font-size: 1.5rem;
     font-weight: bolder;
