--- a/app/Styles/function.module.css
+++ b/app/Styles/function.module.css
@@ -123,6 +123,12 @@
     -o-border-radius:19px;
     margin-top: -4em;
 
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;     /* IE10+/Edge */
+    user-select: none; 
+    cursor: pointer;
+
 
     color: white; 
     font-size: 1.5rem;
