--- a/app/Styles/ideal.module.css
+++ b/app/Styles/ideal.module.css
@@ -122,6 +122,12 @@
     -ms-border-radius:19px;
     -o-border-radius:19px;
     margin-top: -4em;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;     /* IE10+/Edge */
+    user-select: none; 
+    cursor: pointer;
+    
 
 
     color: white; 
