--- a/app/Styles/legal.module.css
+++ b/app/Styles/legal.module.css
@@ -171,6 +171,12 @@ text-decoration: underline;
     -o-border-radius:19px;
     margin-top: -4.35em;
 
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;     /* IE10+/Edge */
+    user-select: none; 
+    cursor: pointer;
+
     color: white; 
     font-size: 1.5rem;
     font-weight: bolder;
